# obeliskv2

./: .gitignore  CLAUDE.md  Cargo.toml  IDEOLOGUES.md  METHOD.md  ROADMAP.md  STYLE.md  VISION.md  cornerstone.md  run-lens.ps1
assets/glyphs/: atlas.txt
assets/lore/: voice.txt
assets/palettes/: golden-hour-haven.json  sunset-arcade.json
docs/: aetherium-engine.md  aetherium-spinoff.md  assets.md  distribution.md
lore/: the-moss-on-the-silicon-ring.md  the-river-country.md  the-testament-of-the-412.md
src/: event.rs  field.rs  haps.rs  lib.rs  lore.rs  main.rs  recollection.rs  render.rs  terminal.rs  terrain.rs  vision.rs  world.rs
src/content/: glsl.rs  lore.rs  mod.rs  palette.rs
src/render/: atlas.rs  mod.rs
src/world/: entity.rs  event.rs  field.rs  haps.rs  mod.rs  recollection.rs  terrain.rs  vision.rs  watcher.rs
stones/: bench.md  collective-magic.md  someone-elses-sandbox.md  the-chosen-emptiness.md  the-glass.md  the-line.md  the-watched-self.md
