[package]
name = "obelisk"
version = "0.3.0"
edition = "2021"

[dependencies]
crossterm = "0.27"
# The CPU floor of the windowed renderer: winit hands us a window and the keys,
# softbuffer hands us a flat field of pixels. Everything between is ours. The GPU
# ceiling (wgpu) and its mastering pass slot in behind this same buffer later.
winit = "0.30"
softbuffer = "0.4"

# A public-domain 8x8 bitmap font, pure Rust — no .ttf shipped. Baked in for the
# window's HUD text; our own atlas (assets/glyphs/atlas.txt) overrides it for the
# hero marks (∘ ○ ·) and the arrows. Keeps the single self-contained exe.
font8x8 = "0.3"

# Engineering standard — see STYLE.md for the rationale and the Shall/Will/Should
# tiers. Almost everything sits at `warn` (the build stays green) and ratchets to
# `deny` as the code is cleaned. Clippy lints fire under `cargo clippy`.
[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"
needless_pass_by_value = "warn"
inefficient_to_string = "warn"
